--- a/you-dont-know-js-es6-and-beyond/package.json
+++ b/you-dont-know-js-es6-and-beyond/package.json
@@ -17,6 +17,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-debug": "^2.1.2",
+    "gulp-watch": "^4.3.5",
     "path": "^0.12.7",
     "run-sequence": "^1.1.5",
     "webpack": "^1.12.9"
